implements HTTP sending

--- a/testmod.yml
+++ b/testmod.yml
@@ -4,7 +4,8 @@
   tasks:
   - name: run gelf_logger
     gelf_logger:
-      dest: "tcp://127.0.0.1:12202"
+        #dest: "tcp://127.0.0.1:12202"
+      dest: "http://127.0.0.1:12202/gelf"
       message: "hello_world"
       full_message: "lorem ipsum"
       host: "{{ ansible_hostname }}"
